# adventofcode

./: .gitignore  Makefile  Pipfile  README.md  aoc_1.py  aoc_3.py  main_2020.py
2020/: Makefile  aoc_1.py  aoc_10.py  aoc_2.py  aoc_3.py  aoc_4.py  aoc_5.py  aoc_6.py  aoc_6_alt.py  aoc_7.py  aoc_8.py  aoc_9.py  util.py
2021/: aoc_11.py  aoc_12.py  aoc_14.py  aoc_15.py  aoc_16.py  aoc_18.py  aoc_19.py  aoc_2.py  aoc_20_example_data2  aoc_22.py  aoc_24.py  aoc_24_data  aoc_4.py  aoc_5.py
2022/: Makefile  aoc_1.py  aoc_11.py  aoc_11_alt.py  aoc_12.py  aoc_14.py  aoc_15.py  aoc_15_alt.py  aoc_15_z3.py  aoc_16.py  aoc_16_z3.py  aoc_17.py  aoc_17_alt.py  aoc_18.py  aoc_19.py  aoc_19_old.py  aoc_20.py  aoc_21.py  aoc_22.py  aoc_23.py  aoc_24.py  aoc_25.py  aoc_3.py  aoc_9_alt.py  aoc_x.py  util.py
aoc_2015/: aoc_1.py  aoc_10.py  aoc_11.py  aoc_12.py  aoc_13.py  aoc_14.py  aoc_15.py  aoc_16.py  aoc_17.py  aoc_18.py  aoc_19.py  aoc_2.py  aoc_20.py  aoc_21.py  aoc_22.py  aoc_23.py  aoc_24.py  aoc_25.py  aoc_3.py  aoc_4.py  aoc_5.py  aoc_6.py  aoc_7.py  aoc_8.py  aoc_9.py
aoc_2016/: aoc_1.py  aoc_10.py  aoc_11.py  aoc_12.py  aoc_13.py  aoc_14.py  aoc_15.py  aoc_16.py  aoc_17.py  aoc_18.py  aoc_19.py  aoc_2.py  aoc_20.py  aoc_21.py  aoc_22.py  aoc_23.py  aoc_24.py  aoc_25.py  aoc_3.py  aoc_4.py  aoc_5.py  aoc_6.py  aoc_7.py  aoc_8.py  aoc_9.py
aoc_2017/: aoc_1.py  aoc_10.py  aoc_11.py  aoc_12.py  aoc_13.py  aoc_14.py  aoc_15.py  aoc_2.py  (+17 more)
aoc_2018/aoc_rust_2018/: Cargo.toml
aoc_2018/aoc_rust_2018/src/: day02.rs  day03.rs  day04.rs  day05.rs  day08.rs  day09.rs  day1.rs  day10.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  lib.rs  main.rs
(+181 files in other folders)
