[package]
name = "aoc_rust"
version = "0.3.0"
edition = "2021"

[lib]
name = "aoc_rust"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
itertools = "0.13.0"
counter = "0.6.0"

[dependencies.pyo3]
version = "0.22.3"
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
features = ["abi3-py310"]

[profile.dev]
opt-level = 3