[package]
name = "aoc_rust"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "aoc_rust"
path = "src/main.rs"

[lib]
name = "aoc_rust"
path = "src/lib.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "lib"]

[dependencies]
rand = "0.8.5"
itertools = "0.13.0"
counter = "0.6.0"
defaultmap = "0.6.0"
num = "0.4.3"
clap = { version = "4.5.19", features = ["derive"] }

[dependencies.pyo3]
version = "0.22.3"
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
features = ["abi3-py310"]

[profile.dev]
opt-level = 3